# -DataChallenge--Odontocetes_click_sounds_detection

./: .gitignore  AudioUtil.py  CNN_scratch.py  CNN_testing.py  CNN_training.py  README.md  charts.ipynb  classic_model.py  create_model.py  data_processing.py  main.py  notebook_AIFF-to.ipynb  notebook_CRAP.ipynb  notebook_aiff2png2Tfrecord.ipynb  notebook_fonctionnel.ipynb  notebook_scikit_learn.ipynb  pyproject.toml  requirements.txt  utils.py
CNN topic/Convolution_1D/: simple_testing.py  simple_training.py  submission_l2.csv
CNN topic/Convolution_2D/: CNN_testing.py
CNN_topic/Convolution_1D/: notebook_conv1d.ipynb  predict.py  simple_testing.py  simple_training.py  submission_0.8974.csv  submission_l2_0.9187.csv  submission_l2_10epochs_bandwithReduced.csv  submission_l2_10epochs_bandwithReducedV2.csv  submission_l2_10epochs_batchNorm.csv  submission_l2_10epochs_filtersIncreasedPerLayer.csv  submission_l2_20ephocs.csv  submission_l2_30ephocs.csv  submission_spectro.csv  test.ipynb  training.py  training_with_data_augmentation.py
CNN_topic/Convolution_2D/: CNN.py  CNN_training.py  classic_model.py
Reservoir_Computing_topic/: reservoir_classification.ipynb  reservoir_test.py  true_test_because_Tristans_version_is_not_vely_good.ipynb
images/: charts.ipynb
notebooks/: WIP_notebook_aiff2png2Tfrecord.ipynb  classical_classifiers.ipynb  notebook_scikit_learn.ipynb  reservoir_classification.ipynb
numpy_data/: audio_mfccs.npy  label_files.npy
utils/: utils.py
