[tool.poetry]
name = "projet-spe-ia"
version = "0.1.0"
description = ""
authors = ["Tristan Goncalves <goncalvestristan.pro@protonmail.com>", "Thomas Chimabult <>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.5"
torch = "^2.0.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
nvitop = "^1.3.0"
dask = "^2023.9.2"
soundfile = "^0.12.1"
scipy = "^1.11.3"
wget = "^3.2"
numpy = "1.25.0"
ipython = "^8.18.1"
seaborn = "^0.13.0"
efficientnet = "^1.1.1"
tqdm = "^4.66.1"
comm = "^0.2.0"
ipykernel = "^6.27.1"
xgboost = "^2.0.2"
reservoirpy = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
